# MIPT-networked

./: .gitignore  CMakeLists.txt  README.md
tasks/: CMakeLists.txt
tasks/w1/: CMakeLists.txt  client.cpp  server.cpp
tasks/w1/client/: client.cpp  client.hpp  main.cpp
tasks/w1/infra/: array.hpp  array.ipp
tasks/w1/infra/detail/: array_base.hpp  array_base.ipp
tasks/w1/input/: input.cpp
tasks/w1/network/: endpoint.cpp  endpoint.hpp  host.cpp  host.hpp  packet.cpp  packet.hpp  socket.cpp  socket.hpp
tasks/w1/network/detail/: handle.cpp  handle.hpp
tasks/w1/protocol/: protocol.cpp  protocol.hpp
tasks/w1/server/: main.cpp  server.cpp  server.hpp
tasks/w2/: CMakeLists.txt
tasks/w2/client/: client.cpp  client.hpp  main.cpp
tasks/w2/game/: main.cpp  server.cpp  server.hpp
tasks/w2/input/: input.hpp
tasks/w2/lobby/: main.cpp  server.cpp  server.hpp
tasks/w2/network/: handler.hpp  host.cpp  network.hpp  packet.hpp  socket.cpp  socket.hpp
tasks/w2/network/detail/: enet_address_deleter.hpp  enet_host_deleter.cpp  enet_host_deleter.hpp  enet_packet_deleter.cpp  enet_packet_deleter.hpp  forward.hpp
tasks/w2/protocol/: protocol.cpp  protocol.hpp
tasks/w4/: CMakeLists.txt
tasks/w4/client/: client.cpp  client.hpp  controller.cpp  controller.hpp  main.cpp
tasks/w4/entity/: entity.hpp  world.cpp  world.hpp
tasks/w4/network/: address.cpp  address.hpp  host.cpp  host.hpp  network.cpp  packet.cpp  socket.cpp  socket.hpp
tasks/w4/network/detail/: enet_address_deleter.cpp  enet_packet_deleter.cpp  enet_peer_deleter.cpp  enet_peer_deleter.hpp
tasks/w4/platform/: keyboard.cpp  keyboard.hpp  window.cpp  window.hpp
tasks/w4/protocol/: protocol.cpp  protocol.hpp
tasks/w4/server/: controller.cpp  controller.hpp  main.cpp  server.cpp  server.hpp
tasks/w4/stream/: reader.cpp  reader.hpp  writer.cpp  writer.hpp
tasks/w4/utils/: random.cpp  random.hpp  uuid.cpp  uuid.hpp
tasks/w7/: quantisation.h
